ajout pour du liens du site

--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "vite": "^7.1.2",
     "vite-plugin-gh-pages": "^1.0.1"
   },
-  "homepage": "https://oretro.github.io/Porfolio-nathan/"
+  "homepage": "https://OretrO.github.io/Porfolio-nathan/"
 }
